--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,10 +6,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: black;
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
